tests/ui/atomics/scope_overreach.stderr
error[RX3010]: scoped atomic scope misuse: atomic grants scope `Scope::Block`, but operation uses wider `Scope::System`
 --> $DIR/atomics/scope_overreach.rx:3:20
  |
3 |     a.fetch_add(1, Scope::System); //~ ERROR RX3010
  |                    ^^^^^^^^^^^^^ scope exceeds the granted atomic scope
